--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LAnding Page Project</title>
-    
+    <title>Landing Page Project</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -27,10 +30,10 @@
         <div class="info-bar">
             <div class="sub-heading">Some random information.</div>
             <div class="info-container">
-                <div class="info1"></div>
-                <div class="info2"></div>
-                <div class="info3"></div>
-                <div class="info4"></div>
+                <div class="info1">info</div>
+                <div class="info2">info</div>
+                <div class="info3">inf</div>
+                <div class="info4">inf</div>
             </div>
         </div>
         <div class="quote-bar">
